1) Fixed login url to using the one for microservices 2) Fixed layout issue.

--- a/angular5-client/src/app/test-apis/error-handing/error-handing.component.scss
+++ b/angular5-client/src/app/test-apis/error-handing/error-handing.component.scss
@@ -1,6 +1,7 @@
 .tests-page {
     overflow: auto;
     height: calc(90vh - 150px);
+    padding: 0px 15px;
 }
 
 .card-title {
